--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "netdna",
   "description": "NetDNA API wrapper and CLI for node.js.",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "author": "Nick Baugh <niftylettuce@gmail.com>",
   "contributors": [
     {
@@ -32,9 +32,8 @@
   "dependencies": {
     "commander": "~1.1.1",
     "underscore": "~1.4.3",
-    "oauth": "~0.9.8",
-    "qs": "~0.5.3",
-    "request": "~2.12.0"
+    "request": "~2.12.0",
+    "oauth": "git://github.com/niftylettuce/node-oauth"
   },
   "devDependencies": {
     "vows": "*"
