Don't unnecessarily limit the Node version
This removes a warning that gets printed during `npm install netdna`.

--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "url": "https://github.com/niftylettuce/node-netdna.git"
   },
   "engines": {
-    "node": "0.8.x",
+    "node": ">0.8",
     "npm": "1.1.x"
   },
   "main": "netdna",
