Issue #7: Allowing for deletion of multiple files.

--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     {
       "name": "Dali Kilani",
       "email": "dali@ifeelgoods.com"
+    },
+    {
+      "name": "Joshua Mervine",
+      "email": "joshua@mervine.net"
     }
   ],
   "keywords": [
