--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "commander": "~1.1.1",
     "underscore": "~1.4.3",
     "request": "~2.12.0",
-    "oauth": "git://github.com/niftylettuce/node-oauth"
+    "oauth": "~0.9.10"
   },
   "devDependencies": {
     "vows": "*"
